--- a/Budget/Budget/templates/public/home.html
+++ b/Budget/Budget/templates/public/home.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <div class="container">
     
-      <h1 class="display-3">Welcome to Budgeter</h1>
+      <h1 class="display-3">Welcome to Budgetter</h1>
     
       <p>This is a starter Flask template. It includes Bootstrap 5, jQuery 3, Flask-SQLAlchemy, WTForms, and various testing utilities out of the box.</p>
       <p><a href="https://github.com/cookiecutter-flask/cookiecutter-flask" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
@@ -15,19 +15,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <h2><i class="fa-solid fa-code"></i> Bootstrap 5</h2>
-      <p>Sleek, intuitive, and powerful mobile-first front-end framework for faster and easier web development.</p>
-      <p><a class="btn btn-outline-secondary" href="http://getbootstrap.com/">Official website &raquo;</a></p>
-    </div>
-    <div class="col-lg-4">
-      <h2><i class="fa-solid fa-flask"></i> SQLAlchemy</h2>
-      <p>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.</p>
-      <p><a href="http://www.sqlalchemy.org/" class="btn btn-outline-secondary">Official website &raquo;</a></p>
-   </div>
-    <div class="col-lg-4">
-      <h2><i class="fa-solid fa-pen-to-square"></i> WTForms</h2>
-      <p>WTForms is a flexible forms validation and rendering library for python web development.</p>
-      <p><a href="http://wtforms.simplecodes.com/" class="btn btn-outline-secondary">Official website &raquo;</a></p>
+      <h2><i class="fa-solid fa-upload_csv"></i> Upload CSV File</h2>
+      <form action="/upload" method="post" enctype="multipart/form-data">
+      <input type="file" name="file">
+      <input type="submit" value="Upload">
+      </form>
     </div>
   </div><!-- /.row -->
 </div>
